--- a/frontend/src/components/index/Projects.astro
+++ b/frontend/src/components/index/Projects.astro
@@ -8,14 +8,14 @@
       My Latest Design & Development Projects
     </p>
     <button
-      class="whitespace-nowrap hidden xl:block w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="whitespace-nowrap hidden xl:block w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >View All Projects</button
     >
   </div>
   <div class="flex flex-col gap-10">
     <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >
         <img class="w-full bg-cover" src="/images/project1.webp" alt="" />
       </div>
@@ -35,7 +35,7 @@
           </p>
         </div>
         <p
-          class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
+          class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small hover:bg-[#C8F031]"
         >
           <svg
             width="14"
@@ -56,7 +56,7 @@
     </div>
     <div class="flex flex-col xl:flex-row-reverse items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >
         <img class="w-full bg-cover" src="/images/project2.webp" alt="" />
       </div>
@@ -76,7 +76,7 @@
           </p>
         </div>
         <p
-          class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
+          class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small hover:bg-[#C8F031]"
         >
           <svg
             width="14"
@@ -97,7 +97,7 @@
     </div>
     <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >
         <img class="w-full bg-cover" src="/images/project3.webp" alt="" />
       </div>
@@ -117,7 +117,7 @@
           </p>
         </div>
         <p
-          class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
+          class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small hover:bg-[#C8F031]"
         >
           <svg
             width="14"
@@ -137,7 +137,7 @@
       </div>
     </div>
     <button
-      class="whitespace-nowrap xl:hidden w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="whitespace-nowrap xl:hidden w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >View All Projects</button
     >
   </div>
