--- a/frontend/src/components/index/Testimonial.astro
+++ b/frontend/src/components/index/Testimonial.astro
@@ -12,7 +12,7 @@
       about creating memorable experiences.
     </p>
     <div
-      class="p-6 border bg-white border-[#0C0F03] rounded-xl flex flex-col gap-10 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1 w-full max-w-[770px]"
+      class="p-6 border bg-white border-[#0C0F03] rounded-xl flex flex-col gap-10 shadow-[4px_4px_0px_#0C0F03] hover-active-effect w-full max-w-[770px]"
     >
       <p
         class="bg-[#FEE145] w-10 h-10 flex justify-center items-center rounded-full border"
