--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -13,32 +13,32 @@
           memorable experiences.
         </p>
         <button
-          class="w-fit rounded-full bg-white font-bold text-lg sm:text-lg border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+          class="w-fit rounded-full bg-white font-bold text-lg sm:text-lg border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
           >Get In Touch</button
         >
         <div class="flex flex-col gap-2">
           <p class="font-bold text-lg sm:text-xl">Follow Me</p>
           <div class="flex gap-2">
             <div
-              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
             >
               <img class="h-6 w-6" src="/svg/facebook.svg" />
             </div>
 
             <div
-              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
             >
               <img class="h-6 w-6" src="/svg/github.svg" />
             </div>
 
             <div
-              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
             >
               <img class="h-6 w-6" src="/svg/instagram.svg" />
             </div>
 
             <div
-              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
             >
               <img class="h-6 w-6" src="/svg/x.svg" />
             </div>
