--- a/frontend/src/components/ScrollUp.astro
+++ b/frontend/src/components/ScrollUp.astro
@@ -1,7 +1,7 @@
 <p
   id="scroll-to-top"
   aria-label="Menu"
-  class="fixed bottom-0 right-0 m-6 -rotate-45 z-10 cursor-pointer p-4 bg-white border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031] opacity-0 pointer-events-none !duration-100"
+  class="fixed bottom-0 right-0 m-6 -rotate-45 z-10 cursor-pointer p-4 bg-white border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small opacity-0 pointer-events-none !duration-100"
 >
   <svg
     width="14"
