--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -10,6 +10,10 @@
   @apply hover:shadow-[8px_8px_0px_#0C0F03] active:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1 active:-translate-y-1
 }
 
+.hover-active-effect-small{
+  @apply hover:shadow-[4px_4px_0px_#0C0F03] active:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 active:-translate-y-1
+}
+
 
 *{
     font-family: 'Syne', sans-serif;
