--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -1,7 +1,7 @@
 <div
-  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-8 mx-auto my-20 flex flex-col-reverse gap-20 xl:flex-row justify-between items-center"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-10 mx-auto flex flex-col-reverse gap-10 xl:flex-row justify-between items-center"
 >
-  <div class="flex flex-col gap-5 justify-center text-center items-center">
+  <div class="flex flex-col gap-2 justify-center text-center items-center">
     <div class="flex items-center gap-5">
       <p class="hidden xl:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
       <p class="text-2xl sm:text-3xl md:text-4xl font-medium">Hello, I'm</p>
