--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -1,7 +1,9 @@
 <div
   class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-10 mx-auto flex flex-col-reverse gap-10 xl:flex-row justify-between items-center"
 >
-  <div class="flex flex-col gap-2 justify-center text-center items-center">
+  <div
+    class="flex flex-col gap-2 justify-center items-center text-center xl:text-left xl:items-start xl:justify-normal"
+  >
     <div class="flex items-center gap-5">
       <p class="hidden xl:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
       <p class="text-2xl sm:text-3xl md:text-4xl font-medium">Hello, I'm</p>
@@ -10,20 +12,16 @@
         >👋</span
       >
     </div>
-    <p class="font-bold text-5xl md:text-6xl lg:text-7xl xl:text-8xl">
+    <p
+      class="font-bold whitespace-nowrap text-5xl md:text-6xl lg:text-7xl xl:text-8xl"
+    >
       Nikhil Patel
     </p>
     <p class="text-[#545849] font-base w-full sm:w-[600px] text-lg sm:text-xl">
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
     </p>
-    <div
-      class="w-fit flex flex-col sm:flex-row gap-4 mt-4 text-[#0C0F03] text-sm sm:text-base font-bold"
-    >
-      <button
-        class="bg-[#C8F031] rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
-        >Get In Touch</button
-      >
+    <div class="w-fit mt-4 text-[#0C0F03] text-sm sm:text-base font-bold">
       <button
         class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
         >View Portfolio</button
