--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/about/Hero.about.astro";
+import Experience from "../components/about/Experience.about.astro";
 ---
 
 <Layout>
   <Hero />
+  <Experience />
 </Layout>
