--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -1,5 +1,5 @@
 <div
-  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-10 mx-auto flex flex-col-reverse gap-10 xl:flex-row justify-between items-center"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-10 mx-auto flex flex-col-reverse gap-10 xl:flex-row xl:justify-between xl:items-center items-center"
 >
   <div
     class="flex flex-col gap-2 justify-center items-center text-center xl:text-left xl:items-start xl:justify-normal"
