--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -1,5 +1,5 @@
 <div
-  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto py-10 xl:py-50"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto py-10 xl:py-50 mb-20 xl:mb-0"
 >
   <div class="flex flex-col justify-center items-center gap-5">
     <div
