--- a/frontend/src/components/about/Experience.about.astro
+++ b/frontend/src/components/about/Experience.about.astro
@@ -19,77 +19,13 @@
       class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
       <div
-        class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
+        class="p-2 w-fit rounded-full border border-[#0C0F03]border border-[#0C0F03]"
       >
-        <svg
-          width="158"
-          height="128"
-          viewBox="0 0 158 128"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M7 13C7 9.68629 9.68629 7 13 7H151C154.314 7 157 9.68629 157 13V121C157 124.314 154.314 127 151 127H13C9.68629 127 7 124.314 7 121V13Z"
-            fill="#0C0F03"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M1 7C1 3.68629 3.68629 1 7 1H145C148.314 1 151 3.68629 151 7V115C151 118.314 148.314 121 145 121H7C3.68629 121 1 118.314 1 115V7Z"
-            fill="white"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M26 56H66M26 76H66M26 96H66"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M1 31H151"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M92 65C92 63.3431 93.3431 62 95 62H129C130.657 62 132 63.3431 132 65V99C132 100.657 130.657 102 129 102H95C93.3431 102 92 100.657 92 99V65Z"
-            fill="#3463E5"></path>
-          <path
-            d="M86 59C86 57.3431 87.3431 56 89 56H123C124.657 56 126 57.3431 126 59V93C126 94.6569 124.657 96 123 96H89C87.3431 96 86 94.6569 86 93V59Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M16 20C18.2091 20 20 18.2091 20 16C20 13.7909 18.2091 12 16 12C13.7909 12 12 13.7909 12 16C12 18.2091 13.7909 20 16 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M34 20C36.2091 20 38 18.2091 38 16C38 13.7909 36.2091 12 34 12C31.7909 12 30 13.7909 30 16C30 18.2091 31.7909 20 34 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M51 20C53.2091 20 55 18.2091 55 16C55 13.7909 53.2091 12 51 12C48.7909 12 47 13.7909 47 16C47 18.2091 48.7909 20 51 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-        </svg>
+        <img src="/images/company.png" alt="" />
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Design</p>
+        <p class="text-lg sm:text-xl/6 mb-5 font-bold">Apr 2022 - Present</p>
+        <p class="text-xl sm:text-2xl/6 font-bold">Web Designer</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           A digital designer and creative developer from Delhi - India
           passionate about creating memorable experiences.
@@ -101,60 +37,13 @@
       class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
       <div
-        class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
+        class="p-2 w-fit rounded-full border border-[#0C0F03]border border-[#0C0F03]"
       >
-        <svg
-          width="104"
-          height="128"
-          viewBox="0 0 104 128"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M99 7H11C8.79086 7 7 8.79086 7 11V123C7 125.209 8.79086 127 11 127H99C101.209 127 103 125.209 103 123V11C103 8.79086 101.209 7 99 7Z"
-            fill="#0C0F03"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M93 1H5C2.79086 1 1 2.79086 1 5V117C1 119.209 2.79086 121 5 121H93C95.2091 121 97 119.209 97 117V5C97 2.79086 95.2091 1 93 1Z"
-            fill="white"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M19 26C19 24.3431 20.3431 23 22 23H88C89.6569 23 91 24.3431 91 26V92C91 93.6569 89.6569 95 88 95H22C20.3431 95 19 93.6569 19 92V26Z"
-            fill="#01CC65"></path>
-          <path
-            d="M13 20C13 18.3431 14.3431 17 16 17H82C83.6569 17 85 18.3431 85 20V86C85 87.6569 83.6569 89 82 89H16C14.3431 89 13 87.6569 13 86V20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M20.9999 105H24.9999M76.9999 105H72.9999"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M28.9998 37H68.9998M28.9998 53H68.9998M28.9998 69H56.9998"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M41 105H57"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-        </svg>
+        <img src="/images/company.png" alt="" />
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Mobile App Design</p>
+        <p class="text-lg sm:text-xl/6 mb-5 font-bold">Apr 2022 - Present</p>
+        <p class="text-xl sm:text-2xl/6 font-bold">Web Designer</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           A digital designer and creative developer from Delhi - India
           passionate about creating memorable experiences.
@@ -166,278 +55,13 @@
       class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
       <div
-        class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
+        class="p-2 w-fit rounded-full border border-[#0C0F03]border border-[#0C0F03]"
       >
-        <svg
-          width="158"
-          height="128"
-          viewBox="0 0 158 128"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M7 37V121C7 124.314 9.68629 127 13 127H151C154.314 127 157 124.314 157 121V37M7 13C7 9.68629 9.68629 7 13 7H151C154.314 7 157 9.68629 157 13V37H7V13Z"
-            fill="#0C0F03"></path>
-          <path
-            d="M7 37V121C7 124.314 9.68629 127 13 127H151C154.314 127 157 124.314 157 121V37M7 37H157M7 37V13C7 9.68629 9.68629 7 13 7H151C154.314 7 157 9.68629 157 13V37"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M1 31V115C1 118.314 3.68629 121 7 121H145C148.314 121 151 118.314 151 115V31M1 7C1 3.68629 3.68629 1 7 1H145C148.314 1 151 3.68629 151 7V31H1V7Z"
-            fill="white"></path>
-          <path
-            d="M1 31V115C1 118.314 3.68629 121 7 121H145C148.314 121 151 118.314 151 115V31M1 31H151M1 31V7C1 3.68629 3.68629 1 7 1H145C148.314 1 151 3.68629 151 7V31"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path d="M110 57L127.5 77L110 97" fill="#FEE145"></path>
-          <path d="M42 57L24.5 77L42 97" fill="#FEE145"></path>
-          <path
-            d="M106 56L123.5 76L106 96M46 56L28.5 76L46 96M86 51L66 101"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M16 20C18.2091 20 20 18.2091 20 16C20 13.7909 18.2091 12 16 12C13.7909 12 12 13.7909 12 16C12 18.2091 13.7909 20 16 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M34 20C36.2091 20 38 18.2091 38 16C38 13.7909 36.2091 12 34 12C31.7909 12 30 13.7909 30 16C30 18.2091 31.7909 20 34 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M51 20C53.2091 20 55 18.2091 55 16C55 13.7909 53.2091 12 51 12C48.7909 12 47 13.7909 47 16C47 18.2091 48.7909 20 51 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-        </svg>
+        <img src="/images/company.png" alt="" />
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Development</p>
-        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
-        </p>
-      </div>
-    </div>
-
-    <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-    >
-      <div
-        class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
-      >
-        <svg
-          width="158"
-          height="128"
-          viewBox="0 0 158 128"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M7 13C7 9.68629 9.68629 7 13 7H151C154.314 7 157 9.68629 157 13V121C157 124.314 154.314 127 151 127H13C9.68629 127 7 124.314 7 121V13Z"
-            fill="#0C0F03"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M1 7C1 3.68629 3.68629 1 7 1H145C148.314 1 151 3.68629 151 7V115C151 118.314 148.314 121 145 121H7C3.68629 121 1 118.314 1 115V7Z"
-            fill="white"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M26 56H66M26 76H66M26 96H66"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M1 31H151"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M92 65C92 63.3431 93.3431 62 95 62H129C130.657 62 132 63.3431 132 65V99C132 100.657 130.657 102 129 102H95C93.3431 102 92 100.657 92 99V65Z"
-            fill="#3463E5"></path>
-          <path
-            d="M86 59C86 57.3431 87.3431 56 89 56H123C124.657 56 126 57.3431 126 59V93C126 94.6569 124.657 96 123 96H89C87.3431 96 86 94.6569 86 93V59Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-miterlimit="10"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M16 20C18.2091 20 20 18.2091 20 16C20 13.7909 18.2091 12 16 12C13.7909 12 12 13.7909 12 16C12 18.2091 13.7909 20 16 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M34 20C36.2091 20 38 18.2091 38 16C38 13.7909 36.2091 12 34 12C31.7909 12 30 13.7909 30 16C30 18.2091 31.7909 20 34 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M51 20C53.2091 20 55 18.2091 55 16C55 13.7909 53.2091 12 51 12C48.7909 12 47 13.7909 47 16C47 18.2091 48.7909 20 51 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-        </svg>
-      </div>
-      <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Design</p>
-        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
-        </p>
-      </div>
-    </div>
-
-    <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-    >
-      <div
-        class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
-      >
-        <svg
-          width="104"
-          height="128"
-          viewBox="0 0 104 128"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M99 7H11C8.79086 7 7 8.79086 7 11V123C7 125.209 8.79086 127 11 127H99C101.209 127 103 125.209 103 123V11C103 8.79086 101.209 7 99 7Z"
-            fill="#0C0F03"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M93 1H5C2.79086 1 1 2.79086 1 5V117C1 119.209 2.79086 121 5 121H93C95.2091 121 97 119.209 97 117V5C97 2.79086 95.2091 1 93 1Z"
-            fill="white"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M19 26C19 24.3431 20.3431 23 22 23H88C89.6569 23 91 24.3431 91 26V92C91 93.6569 89.6569 95 88 95H22C20.3431 95 19 93.6569 19 92V26Z"
-            fill="#01CC65"></path>
-          <path
-            d="M13 20C13 18.3431 14.3431 17 16 17H82C83.6569 17 85 18.3431 85 20V86C85 87.6569 83.6569 89 82 89H16C14.3431 89 13 87.6569 13 86V20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M20.9999 105H24.9999M76.9999 105H72.9999"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M28.9998 37H68.9998M28.9998 53H68.9998M28.9998 69H56.9998"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M41 105H57"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-        </svg>
-      </div>
-      <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Mobile App Design</p>
-        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
-        </p>
-      </div>
-    </div>
-
-    <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-    >
-      <div
-        class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
-      >
-        <svg
-          width="158"
-          height="128"
-          viewBox="0 0 158 128"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M7 37V121C7 124.314 9.68629 127 13 127H151C154.314 127 157 124.314 157 121V37M7 13C7 9.68629 9.68629 7 13 7H151C154.314 7 157 9.68629 157 13V37H7V13Z"
-            fill="#0C0F03"></path>
-          <path
-            d="M7 37V121C7 124.314 9.68629 127 13 127H151C154.314 127 157 124.314 157 121V37M7 37H157M7 37V13C7 9.68629 9.68629 7 13 7H151C154.314 7 157 9.68629 157 13V37"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M1 31V115C1 118.314 3.68629 121 7 121H145C148.314 121 151 118.314 151 115V31M1 7C1 3.68629 3.68629 1 7 1H145C148.314 1 151 3.68629 151 7V31H1V7Z"
-            fill="white"></path>
-          <path
-            d="M1 31V115C1 118.314 3.68629 121 7 121H145C148.314 121 151 118.314 151 115V31M1 31H151M1 31V7C1 3.68629 3.68629 1 7 1H145C148.314 1 151 3.68629 151 7V31"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path d="M110 57L127.5 77L110 97" fill="#FEE145"></path>
-          <path d="M42 57L24.5 77L42 97" fill="#FEE145"></path>
-          <path
-            d="M106 56L123.5 76L106 96M46 56L28.5 76L46 96M86 51L66 101"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M16 20C18.2091 20 20 18.2091 20 16C20 13.7909 18.2091 12 16 12C13.7909 12 12 13.7909 12 16C12 18.2091 13.7909 20 16 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M34 20C36.2091 20 38 18.2091 38 16C38 13.7909 36.2091 12 34 12C31.7909 12 30 13.7909 30 16C30 18.2091 31.7909 20 34 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M51 20C53.2091 20 55 18.2091 55 16C55 13.7909 53.2091 12 51 12C48.7909 12 47 13.7909 47 16C47 18.2091 48.7909 20 51 20Z"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-        </svg>
-      </div>
-      <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Development</p>
+        <p class="text-lg sm:text-xl/6 mb-5 font-bold">Apr 2022 - Present</p>
+        <p class="text-xl sm:text-2xl/6 font-bold">Web Designer</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           A digital designer and creative developer from Delhi - India
           passionate about creating memorable experiences.
