--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -2,7 +2,7 @@
   class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-8 mx-auto flex justify-between items-center"
 >
   <div class="flex gap-2">
-    <a href="/" class="font-bold text-lg/4.5 text-[#0C0F03]">
+    <a href="/" class="font-bold text-xl/4.5 text-[#0C0F03]">
       <span>nikhil</span>
       <span>.</span>
       <span
@@ -12,14 +12,16 @@
     </a>
   </div>
 
-  <ul class="hidden sm:flex items-center font-medium text-[#545849] gap-12">
-    <li class="cursor-pointer hover:text-black">
+  <ul
+    class="hidden sm:flex items-center text-lg font-medium text-[#545849] gap-12"
+  >
+    <li class="cursor-pointer hover:text-black !duration-0">
       <a href="/about">About Me</a>
     </li>
-    <li class="cursor-pointer hover:text-black">
+    <li class="cursor-pointer hover:text-black !duration-0">
       <a href="/portfolio">Portfolio</a>
     </li>
-    <li class="cursor-pointer hover:text-black">
+    <li class="cursor-pointer hover:text-black !duration-0">
       <a href="/contact">Contact</a>
     </li>
   </ul>
