--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -2,9 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/about/Hero.about.astro";
 import Experience from "../components/about/Experience.about.astro";
+import TechStack from "../components/about/TechStack.astro";
 ---
 
 <Layout>
   <Hero />
   <Experience />
+  <TechStack />
 </Layout>
