--- a/frontend/src/components/about/TechStack.astro
+++ b/frontend/src/components/about/TechStack.astro
@@ -17,7 +17,7 @@
     </p>
   </div>
 
-  <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
     <div
       class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
@@ -71,9 +71,7 @@
     <div
       class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
-      <div
-        class="border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover-active-effect w-fit rounded-full p-2"
-      >
+      <div class="border-[#0C0F03] border w-fit rounded-full p-2">
         <svg
           class="w-10 h-10"
           role="img"
