--- a/frontend/src/pages/contact.astro
+++ b/frontend/src/pages/contact.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Hero from "../components/contact/Hero.contact.astro";
 ---
 
 <Layout>
-  <div class="h-screen w-full flex justify-center items-center">
-    <p class="text-3xl font-bold">Contact</p>
-  </div>
+  <Hero />
 </Layout>
