--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -12,9 +12,11 @@
           and creative developer from Delhi - India passionate about creating
           memorable experiences.
         </p>
-        <button
-          class="w-fit rounded-full bg-white font-bold text-lg sm:text-lg border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-          >Get In Touch</button
+        <a href="/contact">
+          <button
+            class="w-fit rounded-full bg-white font-bold text-lg sm:text-lg border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+            >Get In Touch</button
+          ></a
         >
         <div class="flex flex-col gap-2">
           <p class="font-bold text-lg sm:text-xl">Follow Me</p>
