--- a/frontend/src/components/index/Services.astro
+++ b/frontend/src/components/index/Services.astro
@@ -225,9 +225,11 @@
     </div>
   </div>
   <div class="mx-auto">
-    <button
-      class="bg-[#C8F031] rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-      >Get In Touch</button
+    <a href="/contact">
+      <button
+        class="bg-[#C8F031] rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        >Get In Touch</button
+      ></a
     >
   </div>
 </div>
