--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -21,10 +21,20 @@
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
     </p>
-    <div class="w-fit mt-4 text-[#0C0F03] text-sm sm:text-base font-bold">
-      <button
-        class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
-        >View Portfolio</button
+    <div
+      class="flex flex-col xl:flex-row gap-4 w-fit mt-4 text-[#0C0F03] text-sm sm:text-base font-bold"
+    >
+      <a href="/portfolio">
+        <button
+          class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+          >View Portfolio</button
+        ></a
+      >
+      <a href="/Nikhil-Resume.pdf" download>
+        <button
+          class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+          >Download CV</button
+        ></a
       >
     </div>
   </div>
