--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -25,11 +25,11 @@
       <a href="/contact">Contact</a>
     </li>
   </ul>
-  <div class="relative">
+  <div class="relative sm:hidden">
     <p
       id="menu_icon"
       aria-label="Menu"
-      class="sm:hidden rotate-180 cursor-pointer p-4 border border-[#0C0F03] rounded-full w-fit shadow-[-2px_-2px_0px_#0C0F03] hover:shadow-[-4px_-4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
+      class="rotate-180 cursor-pointer p-4 border border-[#0C0F03] rounded-full w-fit shadow-[-2px_-2px_0px_#0C0F03] hover:shadow-[-4px_-4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
     >
       <svg
         width="14"
@@ -50,7 +50,7 @@
       <p
         id="menu_icon"
         aria-label="Download CV"
-        class="absolute mt-2 sm:hidden cursor-pointer p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
+        class="absolute mt-2 cursor-pointer p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
       >
         <svg
           width="14"
@@ -75,7 +75,7 @@
       </p>
     </a>
     <p
-      class="sm:hidden block absolute top-27 left-1 xl:basis-150 text-gray-500 font-bold text-sm"
+      class="absolute top-27 left-1 xl:basis-150 text-gray-500 font-bold text-sm"
     >
       ⋆ CV
     </p>
