--- a/frontend/src/components/contact/Hero.contact.astro
+++ b/frontend/src/components/contact/Hero.contact.astro
@@ -15,11 +15,21 @@
     <div class="flex flex-wrap flex-col xl:flex-row gap-2 mt-5">
       <input
         type="text"
+        placeholder="Name ⋆"
+        class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] xl:w-[500px]"
+      />
+      <input
+        type="text"
+        placeholder="Email ⋆"
+        class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] xl:w-[500px]"
+      />
+      <input
+        type="text"
         placeholder="Drop me a Hello 👋"
         class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] xl:w-[500px]"
       />
       <button
-        class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+        class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
         >Send</button
       >
       <p class="xl:basis-150 text-gray-500 text-dm text-sm">
