--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -34,6 +34,7 @@
     <div class="relative w-fit flex items-center justify-center group">
       <!-- Profile Image Container -->
       <div
+        id="profile-container"
         class="relative rounded-full p-2 border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 active:shadow-[4px_4px_0px_#0C0F03] active:-translate-y-1 transition-all duration-300"
       >
         <div
@@ -48,7 +49,7 @@
       </div>
 
       <!-- Social Icons -->
-      <div class="absolute h-full w-full">
+      <div id="social-icons" class="absolute h-full w-full">
         <!-- LinkedIn -->
         <a
           href="https://www.linkedin.com"
