--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -49,7 +49,7 @@
       </div>
 
       <!-- Social Icons -->
-      <div id="social-icons" class="absolute h-full w-full">
+      <div id="social-icons" class="absolute h-full w-full hidden md:block">
         <!-- LinkedIn -->
         <a
           href="https://www.linkedin.com"
