--- a/frontend/src/components/contact/Hero.contact.astro
+++ b/frontend/src/components/contact/Hero.contact.astro
@@ -38,7 +38,7 @@
     </div>
   </div>
   <div
-    class="rounded-full p-2 border border-[#0C0F03] shadow-[2px_2px_2px_#0C0F03]"
+    class="rounded-full p-2 border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
   >
     <div
       class="relative w-60 sm:w-80 h-60 sm:h-80 rounded-full overflow-hidden"
