--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -30,116 +30,17 @@
       >
     </div>
   </div>
-  <div class="flex justify-center items-center">
-    <div class="relative w-fit flex items-center justify-center group">
-      <!-- Profile Image Container -->
-      <div
-        id="profile-container"
-        class="relative rounded-full p-2 border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 active:shadow-[4px_4px_0px_#0C0F03] active:-translate-y-1 transition-all duration-300"
-      >
-        <div
-          class="relative w-60 sm:w-80 h-60 sm:h-80 rounded-full overflow-hidden"
-        >
-          <img
-            class="absolute h-full w-full object-cover"
-            src="/images/profile.webp"
-            alt="profile-image"
-          />
-        </div>
-      </div>
-
-      <!-- Social Icons -->
-      <div id="social-icons" class="absolute h-full w-full hidden md:block">
-        <!-- LinkedIn -->
-        <a
-          href="https://www.linkedin.com"
-          target="_blank"
-          class="social-icon top-[-40px] left-[50%] -translate-x-1/2 bg-white"
-        >
-          <img class="h-6 w-6" src="/svg/facebook.svg" />
-        </a>
-
-        <!-- Twitter -->
-        <a
-          href="https://twitter.com"
-          target="_blank"
-          class="social-icon top-[50%] right-[-40px] -translate-y-1/2 bg-white"
-        >
-          <img class="h-6 w-6" src="/svg/github.svg" />
-        </a>
-
-        <!-- GitHub -->
-        <a
-          href="https://github.com"
-          target="_blank"
-          class="social-icon bottom-[-40px] left-[50%] -translate-x-1/2 bg-white"
-        >
-          <img class="h-6 w-6" src="/svg/instagram.svg" />
-        </a>
-
-        <!-- Instagram -->
-        <a
-          href="https://instagram.com"
-          target="_blank"
-          class="social-icon top-[50%] left-[-40px] -translate-y-1/2 bg-white"
-        >
-          <img class="h-6 w-6" src="/svg/x.svg" />
-        </a>
-      </div>
+  <div
+    class="rounded-full p-2 border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
+  >
+    <div
+      class="relative w-60 sm:w-80 h-60 sm:h-80 rounded-full overflow-hidden"
+    >
+      <img
+        class="absolute h-full w-full object-cover"
+        src="/images/profile.webp"
+        alt="profile-image"
+      />
     </div>
   </div>
 </div>
-
-<style>
-  /* Social Icons Styling */
-  .social-icon {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border: 2px solid #0c0f03;
-    box-shadow: 2px 2px 0px #0c0f03;
-    opacity: 0;
-    transform: scale(0);
-    transition:
-      transform 0.4s ease-in-out,
-      opacity 0.4s ease-in-out;
-  }
-
-  /* Show on Hover (Desktop) */
-  .group:hover .social-icon {
-    opacity: 1;
-    transform: scale(1);
-  }
-
-  /* Show on Click (Mobile) */
-  .clicked .social-icon {
-    opacity: 1 !important;
-    transform: scale(1) !important;
-  }
-</style>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const profileContainer = document.getElementById("profile-container");
-    const socialIcons = document.getElementById("social-icons");
-
-    profileContainer.addEventListener("click", function () {
-      // Toggle visibility on mobile
-      socialIcons.classList.toggle("clicked");
-    });
-
-    // Optional: Close icons when clicking outside
-    document.addEventListener("click", function (event) {
-      if (
-        !profileContainer.contains(event.target) &&
-        !socialIcons.contains(event.target)
-      ) {
-        socialIcons.classList.remove("clicked");
-      }
-    });
-  });
-</script>
