--- a/frontend/src/components/index/Projects.astro
+++ b/frontend/src/components/index/Projects.astro
@@ -58,7 +58,7 @@
       <div
         class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >
-        <img class="w-full bg-cover" src="/images/project2.webp" alt="" />
+        <img class="w-full bg-cover" src="/images/mailer.webp" alt="" />
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
         <p class="text-2xl sm:text-3xl font-bold">
