--- a/frontend/src/components/index/Services.astro
+++ b/frontend/src/components/index/Services.astro
@@ -85,8 +85,9 @@
       <div class="flex flex-col gap-2">
         <p class="text-xl sm:text-2xl/6 font-bold">Web Design</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
+          Designing innovative, user-friendly websites that transform digital
+          experiences, blend aesthetic appeal with functional excellence, and
+          meet modern business challenges.
         </p>
       </div>
     </div>
@@ -150,8 +151,9 @@
       <div class="flex flex-col gap-2">
         <p class="text-xl sm:text-2xl/6 font-bold">Mobile App Design</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
+          Developing smooth, responsive mobile applications that engage users,
+          deliver intuitive interfaces, and provide seamless cross-platform
+          digital interactions.
         </p>
       </div>
     </div>
@@ -218,8 +220,9 @@
       <div class="flex flex-col gap-2">
         <p class="text-xl sm:text-2xl/6 font-bold">Web Development</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
+          Creating dynamic, scalable web solutions that leverage full-stack
+          technologies, solve complex business challenges, and drive digital
+          transformation with cutting-edge performance.
         </p>
       </div>
     </div>
